<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFD1B5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/join"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"
            android:background="#A5BDC0"
            android:text="@string/join"
            android:textColor="#D7011A27"
            app:layout_constraintBottom_toTopOf="@+id/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/code"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/create"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"
            android:layout_marginBottom="150dp"
            android:background="#A5BDC0"
            android:text="@string/create_one"
            android:textColor="#D7011A27"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join" />

        <EditText
            android:id="@+id/code"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp"
            android:ems="10"
            android:hint="@string/supply_chain_code"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="50dp"
            android:layout_marginEnd="398dp"
            android:layout_marginRight="398dp"
            android:gravity="center"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@id/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/join">


        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>